src/multimedia/libqmediaplayer.h

typedef struct QAudioOutput QAudioOutput;
typedef struct QIODevice QIODevice;
typedef struct QMediaMetaData QMediaMetaData;
typedef struct QMediaPlayer QMediaPlayer;
typedef struct QMediaTimeRange QMediaTimeRange;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QUrl QUrl;
typedef struct QVideoSink QVideoSink;
QMediaPlayer* QMediaPlayer_new();
QMediaPlayer* QMediaPlayer_new2(QObject* parent);
QMetaObject* QMediaPlayer_MetaObject(const QMediaPlayer* self);
void* QMediaPlayer_Metacast(QMediaPlayer* self, const char* param1);
int QMediaPlayer_Metacall(QMediaPlayer* self, int param1, int param2, void** param3);
libqt_string QMediaPlayer_Tr(const char* s);
libqt_list /* of QMediaMetaData* */ QMediaPlayer_AudioTracks(const QMediaPlayer* self);
libqt_list /* of QMediaMetaData* */ QMediaPlayer_VideoTracks(const QMediaPlayer* self);
libqt_list /* of QMediaMetaData* */ QMediaPlayer_SubtitleTracks(const QMediaPlayer* self);
int QMediaPlayer_ActiveAudioTrack(const QMediaPlayer* self);
int QMediaPlayer_ActiveVideoTrack(const QMediaPlayer* self);
int QMediaPlayer_ActiveSubtitleTrack(const QMediaPlayer* self);
void QMediaPlayer_SetActiveAudioTrack(QMediaPlayer* self, int index);
void QMediaPlayer_SetActiveVideoTrack(QMediaPlayer* self, int index);
void QMediaPlayer_SetActiveSubtitleTrack(QMediaPlayer* self, int index);
void QMediaPlayer_SetAudioOutput(QMediaPlayer* self, QAudioOutput* output);
QAudioOutput* QMediaPlayer_AudioOutput(const QMediaPlayer* self);
void QMediaPlayer_SetVideoOutput(QMediaPlayer* self, QObject* videoOutput);
QObject* QMediaPlayer_VideoOutput(const QMediaPlayer* self);
void QMediaPlayer_SetVideoSink(QMediaPlayer* self, QVideoSink* sink);
QVideoSink* QMediaPlayer_VideoSink(const QMediaPlayer* self);
QUrl* QMediaPlayer_Source(const QMediaPlayer* self);
QIODevice* QMediaPlayer_SourceDevice(const QMediaPlayer* self);
int QMediaPlayer_PlaybackState(const QMediaPlayer* self);
int QMediaPlayer_MediaStatus(const QMediaPlayer* self);
long long QMediaPlayer_Duration(const QMediaPlayer* self);
long long QMediaPlayer_Position(const QMediaPlayer* self);
bool QMediaPlayer_HasAudio(const QMediaPlayer* self);
bool QMediaPlayer_HasVideo(const QMediaPlayer* self);
float QMediaPlayer_BufferProgress(const QMediaPlayer* self);
QMediaTimeRange* QMediaPlayer_BufferedTimeRange(const QMediaPlayer* self);
bool QMediaPlayer_IsSeekable(const QMediaPlayer* self);
double QMediaPlayer_PlaybackRate(const QMediaPlayer* self);
int QMediaPlayer_Loops(const QMediaPlayer* self);
void QMediaPlayer_SetLoops(QMediaPlayer* self, int loops);
int QMediaPlayer_Error(const QMediaPlayer* self);
libqt_string QMediaPlayer_ErrorString(const QMediaPlayer* self);
bool QMediaPlayer_IsAvailable(const QMediaPlayer* self);
QMediaMetaData* QMediaPlayer_MetaData(const QMediaPlayer* self);
void QMediaPlayer_Play(QMediaPlayer* self);
void QMediaPlayer_Pause(QMediaPlayer* self);
void QMediaPlayer_Stop(QMediaPlayer* self);
void QMediaPlayer_SetPosition(QMediaPlayer* self, long long position);
void QMediaPlayer_SetPlaybackRate(QMediaPlayer* self, double rate);
void QMediaPlayer_SetSource(QMediaPlayer* self, QUrl* source);
void QMediaPlayer_SetSourceDevice(QMediaPlayer* self, QIODevice* device);
void QMediaPlayer_Connect_SourceChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_PlaybackStateChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_MediaStatusChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_DurationChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_PositionChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_HasAudioChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_HasVideoChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_BufferProgressChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_SeekableChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_PlaybackRateChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_LoopsChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_MetaDataChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_VideoOutputChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_AudioOutputChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_TracksChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_ActiveTracksChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_ErrorChanged(QMediaPlayer* self, intptr_t slot);
void QMediaPlayer_Connect_ErrorOccurred(QMediaPlayer* self, intptr_t slot);
libqt_string QMediaPlayer_Tr2(const char* s, const char* c);
libqt_string QMediaPlayer_Tr3(const char* s, const char* c, int n);
void QMediaPlayer_SetSourceDevice2(QMediaPlayer* self, QIODevice* device, QUrl* sourceUrl);
void QMediaPlayer_Delete(QMediaPlayer* self);